clusters/ocelot.archifleks.xyz/seed/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transmission
  name: transmission
  namespace: seed
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission:4.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 51413
          protocol: TCP
          hostPort: 51413
        - containerPort: 51413
          protocol: UDP
          hostPort: 51413
        volumeMounts:
        - mountPath: /seed
          name: seed
        - mountPath: /config
          name: config
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: seed
        hostPath:
          # directory location on host
          path: /srv/hostpaths/seed
          # this field is optional
          type: DirectoryOrCreate
      - name: config
        hostPath:
          # directory location on host
          path: /srv/hostpaths/transmission
          # this field is optional
          type: DirectoryOrCreate
      - name: settings
        configMap:
          name: transmission-settings
          defaultMode: 0777
