clusters/ocelot.archifleks.xyz/seed/transmission/service-admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seed
  name: transmission-admin
spec:
  ports:
  - name: admin
    port: 9091
    protocol: TCP
  selector:
    app: transmission
  type: ClusterIP
