clusters/ocelot.archifleks.xyz/seed/transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: seed
  name: torrents
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/app-root: /transmission/web/
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  rules:
    - host: torrents.archifleks.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-admin
                port:
                  number: 9091
  tls:
  - hosts:
    - torrents.archifleks.xyz
    secretName: torrents.archifleks.xyz
